--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.0",
+    "axios": "^1.5.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "googleapis": "^126.0.1",
     "nodemailer": "^6.9.5"
