--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "googleapis": "^126.0.1",
+    "ngrok": "^5.0.0-beta.2",
     "nodemailer": "^6.9.5"
   },
   "devDependencies": {
