--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "googleapis": "^126.0.1",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.3",
     "ngrok": "^5.0.0-beta.2",
-    "nodemailer": "^6.9.5"
+    "nodemailer": "^6.9.5",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "https://github.com/Julzk/whatsapp-web.js/tarball/jkr_hotfix_8",
+    "wwebjs-mongo": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
