--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "googleapis": "^126.0.1",
+    "http": "^0.0.1-security",
     "moment": "^2.29.4",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
@@ -22,6 +23,7 @@
     "nodemailer": "^6.9.5",
     "os": "^0.1.2",
     "qrcode-terminal": "^0.12.0",
+    "socket.io": "^4.7.2",
     "whatsapp-web.js": "https://github.com/Julzk/whatsapp-web.js/tarball/jkr_hotfix_8",
     "wwebjs-mongo": "^1.1.0"
   },
