--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ frontend/node_modules
 ./backend/credentials.json
 ./backend/token.json
 backend/.wwebjs*
+backend/token.json
+backend/credentials.json
+```
