--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "os": "^0.1.2",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.7.2",
+    "unzipper": "^0.10.14",
     "whatsapp-web.js": "https://github.com/Julzk/whatsapp-web.js/tarball/jkr_hotfix_8",
     "wwebjs-mongo": "^1.1.0"
   },
