--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.0",
     "axios": "^1.5.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "googleapis": "^126.0.1",
     "http": "^0.0.1-security",
     "moment": "^2.29.4",
